--- a/projetos/home.css
+++ b/projetos/home.css
@@ -17,6 +17,7 @@ header {
     padding: 20px;
     border: 1px solid #d3d3d3;
     background-color: white;
+    z-index: 1000;
 }
 main {
     display: flex;
@@ -65,6 +66,7 @@ main {
     gap: 30px;
     padding-top: 30px;
     z-index: 1;
+    display: none;
 }
 
 .menu_contracted img {
@@ -103,15 +105,19 @@ main {
 /* Smartphones */
 @media (max-width: 600px) {
     .base {
-        margin-left: 85px;
-        margin-right: 20px;
+        margin-left: 4%;
+        margin-right: 4%;
         margin-top: 101px;
         height: 100%;
         text-align: justify;
+        background-color: #db3434;
     }    
 
+    .menu_contracted {
+        display: none;
+    }
     .introducao h1 {
-        font-size: 1.8rem;
+        font-size: 2.2rem;
         color: var(--verde_principal);
         font-weight: bold;
         font-style: italic !important;
@@ -123,16 +129,18 @@ main {
   /* Tablets em modo retrato */
 @media (min-width: 601px) and (max-width: 768px) {
     .base {
-        margin-left: 90px;
-        margin-right: 30px;
+        margin-left: 3%;
+        margin-right: 3%;
         background-color: rgb(217, 223, 140);
         margin-top: 101px;
         height: 100%;
         text-align: justify;
     }    
-    
+    .menu_contracted {
+        display: none;
+    }
     .introducao h1 {
-        font-size: 2rem;
+        font-size: 2.2rem;
         color: var(--verde_principal);
         font-weight: bold;
         font-style: italic !important;
@@ -154,14 +162,17 @@ main {
   /* Tablets em modo paisagem */
 @media (min-width: 769px) and (max-width: 1024px) {
     .base {
-        margin-left: 100px;
-        margin-right: 30px;
+        margin-left: 2.5%;
+        margin-right: 2.5%;
         background-color: rgb(150, 216, 137);
         margin-top: 101px;
         height: 100%;
         text-align: justify;
     }    
 
+    .menu_contracted {
+        display: none;
+    }
     .introducao h1 {
         font-size: 2.5rem;
         color: var(--verde_principal);
@@ -185,14 +196,13 @@ main {
   /* Desktops */
 @media (min-width: 1025px) and (max-width: 1200px) {
     .base {
-        margin-left: 110px;
-        margin-right: 40px;
+        margin-left: 2%;
+        margin-right: 2%;
         background-color: rgb(111, 173, 184);
         margin-top: 101px;
         height: 100%;
         text-align: justify;
     }   
-
     .introducao h1 {
         font-size: 2.5rem;
         color: var(--verde_principal);
@@ -216,8 +226,8 @@ main {
   /* Desktops grandes */
 @media (min-width: 1201px) {
     .base {
-        margin-left: 150px;
-        margin-right: 40px;
+        margin-left: 2%;
+        margin-right: 2%;
         background-color: rgb(113, 94, 223);
         margin-top: 101px;
         height: 100%;
