--- a/projetos/tech-fund.css
+++ b/projetos/tech-fund.css
@@ -53,7 +53,7 @@ main {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-65%, -50%);
+    transform: translate(-50%, -50%);
 }
 .titulo_pg h1 {
     font-family: "Poppins", sans-serif;
@@ -64,20 +64,7 @@ main {
 
 /*Menu ao lado*/
 .menu_contracted {
-    margin-top: 101px;
-    position: fixed;
-    height: 100%;
-    width: 6%;
-    min-width: 60px;
-    border: 1px solid #d3d3d3;
-    position: fixed;
-    background-color: #f8f8f8;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-    padding-top: 30px;
-    z-index: 1;
+    display: none;
 }
 
 .menu_contracted img {
@@ -94,7 +81,7 @@ main {
     transition: 0.6s ease-in-out;
 }
 .imagem_icon_menu:hover {
-    background-color: #9c9c9cad;
+    background-color: #a39c9cef;
 }
 /*FIM Menu ao lado*/
 
@@ -104,6 +91,7 @@ main {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     width: 100%;
     height: auto;
 }
@@ -130,7 +118,10 @@ main {
 .sobre_item_topo h3:hover::after {
     transform: scaleX(1); /* Mostra o sublinhado ao passar o mouse */
 }
-
+.sobre_item_corpo span {
+    color: var(--verde_principal);
+    font-weight: 900;
+}
 .sobre_item_corpo_href p {
     margin: 0; /* Remove margens padrão do parágrafo */
     position: relative; /* Mantém a posição relativa */
@@ -148,7 +139,6 @@ main {
 }
 .sobre_item_corpo_href p:hover::after {
     transform: scaleX(1); /* Mostra o sublinhado ao passar o mouse */
-    
 }
 .sobre_item_corpo_href {
     height: 35px;
@@ -157,17 +147,226 @@ main {
     display: flex; /* Utilizamos flexbox para alinhar itens */
     justify-content: center; /* Centraliza horizontalmente */
     align-items: center; /* Centraliza verticalmente */
+    color: var(--verde_principal);
+}
+.sobre_item_corpo_href p {
     cursor: pointer;
+}
+
+/*Investimento*/
+.investimentos_pai {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 40px;
+}
+.tituloTabela{
+    width: 90%;
+    border-radius: 15px 15px 15px 15px;
+    text-align: center;
+    border: 1px solid #d3d3d3;
+    font-family: "Poppins", sans-serif;
+    margin-bottom: 40px;
+    background-color: var(--verde_principal);
+}
+.tituloTabela h1 {
+    color: white;
+}
+.Tabela_riscos {
+    width: 90%;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    margin-bottom: 40px;
+}
+.Tabela_riscos h1 {
     color: var(--verde_principal);
 }
 
+.pai_risco {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 40px;
+    gap: 40px;
+    flex-wrap: wrap
+}
+.pai_risco p {
+    font-size: 20px;
+    font-family: "Poppins", sans-serif;
+    color: var(--verde_principal);
+}
+.rico_item {
+    display: flex;
+    align-items: center;
+}
+.rico_item img {
+    cursor: pointer;
+}
+.rico_item p {
+    cursor: pointer;
+}
+.card {
+    background-color: #fff;
+    border: 1px solid #d3d3d3;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    width: 90%;
+    text-align: center;
+    margin-bottom: 50px;
+}
+/*risco*/
+.card_risco_pouco {
+    border-left: 4px solid #74d048;
+}
+.card_risco_baixo {
+    border-left: 4px solid #207540;
+}
+.card_risco_medio {
+    border-left: 4px solid #fccc05;
+}
+.card_risco_moderado {
+    border-left: 4px solid #fc6708;
+}
+.card_risco_alto {
+    border-left: 4px solid #770a30;
+}
+/*risco*/
+.header_card {
+    font-family: "Poppins", sans-serif;
+    color: #555;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.header_card img {
+    margin-left: 20px;
+}
+.details-button {
+    margin-top: 20px;
+    color: var(--verde_principal);
+    background-color: white;
+    border: 1px solid var(--verde_principal);
+    border-radius: 5px;
+    padding: 5px;
+    cursor: pointer;
+    transition: 0.6s ease-in-out;
+}
+.details-button:hover {
+    background-color: #f5f5f5;
+}
+.mostrar_mais_button {
+    margin-top: 5px;
+    margin-bottom: 30px;
+    font-size: 18px;
+    color: var(--verde_principal);
+    background-color: white;
+    border: 1px solid var(--verde_principal);
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+    transition: 0.6s ease-in-out;
+}
+.mostrar_mais_button:hover {
+    background-color: #f5f5f5;
+}
+.invest-button {
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    color: white;
+    background-color: var(--verde_principal);
+    border: none;
+    border-radius: 5px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 15px;
+    padding-right: 15px;
+    cursor: pointer;
+    transition: 0.6s ease-in-out;
+    margin: 30px;
+}
+.invest-button:hover {
+    background-color: #2f7a0c;
+}
+.body_card {
+    overflow: hidden;
+    height: 60px;
+    transition: height 0.3s ease;
+    padding-left: 200px;
+    padding-right: 200px;
+}
+
+/*LISTA LER +*/
+.fundos, .acoes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #d3d3d3;
+    background-color: white;
+    width: 90%;
+}
+.fundos, .acoes h1 {
+    font-family: "Poppins", sans-serif;
+    color: #555;
+}
+.fundos {
+    margin-bottom: 40px;
+    border-radius: 0px 0px 25px 25px;
+}
+.fundos_itens {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.acoes {
+    border-radius: 25px;
+}
+.acoes_itens {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 2650px;
+    overflow: hidden; 
+}
+.fundos_itens {
+    height: 1600px;
+    overflow: hidden;
+}
+
+.logo {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+}
+.content {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.section {
+    font-weight: bold;
+}
+.section h2 {
+    color: var(--verde_principal);
+}
+.section p {
+    color: #333;
+}
+.section span {
+    color: var(--verde_principal);
+}
+/*FimInvestimento*/
 /* Smartphones */
 @media (max-width: 600px) {
     .titulo_pg {
         position: absolute;
         top: 50%;
-        left: 50%;
+        left: 47.5%;
         transform: translate(-50%, -50%);
+    }
+    .menu_contracted {
+        display: none;
     }
     .icon_sicredi {
         position: absolute;
@@ -177,13 +376,10 @@ main {
         display: none;
     }
     .base {
-        margin-left: 85px;
-        margin-right: 20px;
         margin-top: 101px;
         height: 100%;
         text-align: justify;
     }    
-
     .introducao h1 {
         font-size: 2rem;
         color: var(--verde_principal);
@@ -192,18 +388,6 @@ main {
         font-family: 'Exo 2' !important;
         line-height: 2rem !important;
     }
-
-    .introducao_box {
-        display: flex;
-        flex-direction: column;
-        height: auto;
-        width: 100%;
-    }
-    .box_introducao {
-        width: 80%;
-        padding-left: 40px;
-        padding-right: 40px;
-    }
     .imagem_box {
         width: 100%;
         height: 100%;
@@ -211,13 +395,32 @@ main {
     }
     
     .imagem_box img {
-        margin-left: 40px;
-        width: 80%;
+        width: 85%;
+        height: 100%;
+        border-radius: 10px 10px 10px 10px;
+    }
+    .introducao_box {
+        display: flex;
+        flex-direction: column;
+        height: auto;
+    }
+    .box_introducao {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    .imagem_box {
+        width: 100%;
+        height: 100%;
+        border-radius: 10px 10px 10px 10px;
+        display: flex;
+        justify-content: center;
+    }
+    .imagem_box img {
+        width: 90%;
         height: 100%;
         max-height: 400px;
         border-radius: 10px 10px 10px 10px;
     }
-    
     .sobre_box {
         margin-top: 20px;
         display: flex;
@@ -229,8 +432,8 @@ main {
         justify-content: space-around;
     }
     .sobre_item {
-        width: 300px;
-        height: 380px;
+        width: 90%;
+        height: auto;
         border: 1px solid #d3d3d3;
         background-color: rgb(248, 249, 247);
         border-radius: 10px;
@@ -245,7 +448,6 @@ main {
         gap: 10px;
         padding-top: 10px;
     }
-    
     .sobre_item_topo img {
         padding-left: 10px;
         height: 40px;
@@ -253,29 +455,40 @@ main {
     
     .sobre_item_corpo {
         display: flex;
-        height: 280px;
+        height: auto;
         text-align: justify;
         padding-left: 20px;
         padding-right: 20px;
     }
-    #sobre_item_corpo_cripto{
-        height: 280px;
+    /*card*/
+    .body_card {
+        padding-left: 40px;
+        padding-right: 40px;
     }
+    .content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    /*card*/
 }
 
 @media (min-width: 601px) and (max-width: 768px) {
     .icon_sicredi {
+        display: none;
+    }
+    .titulo_pg {
         position: absolute;
         top: 50%;
-        left: 83%;
-        transform: translate(-65%, -50%);
+        left: 47.5%;
+        transform: translate(-50%, -50%);
+    }
+    .menu_contracted {
+        display: none;
     }
     .base {
-        margin-left: 90px;
-        margin-right: 30px;
         background-color: rgb(217, 223, 140);
         margin-top: 101px;
-        height: 100%;
         text-align: justify;
     }    
     
@@ -288,15 +501,12 @@ main {
         line-height: 2rem !important;
     }
 
-    
     .introducao_box {
         display: flex;
         flex-direction: column;
         height: auto;
-        width: 100%;
     }
     .box_introducao {
-        width:89%;
         padding-left: 40px;
         padding-right: 40px;
     }
@@ -304,11 +514,12 @@ main {
         width: 100%;
         height: 100%;
         border-radius: 10px 10px 10px 10px;
+        display: flex;
+        justify-content: center;
     }
     
     .imagem_box img {
-        margin-left: 40px;
-        width: 89%;
+        width: 90%;
         height: 100%;
         max-height: 400px;
         border-radius: 10px 10px 10px 10px;
@@ -324,8 +535,8 @@ main {
         justify-content: space-around;
     }
     .sobre_item {
-        width: 450px;
-        height: 280px;
+        width: 90%;
+        height: auto;
         border: 1px solid #d3d3d3;
         background-color: rgb(248, 249, 247);
         border-radius: 10px;
@@ -347,15 +558,24 @@ main {
     
     .sobre_item_corpo {
         display: flex;
-        height: 180px;
+        height: auto;
         text-align: justify;
         padding-left: 20px;
         padding-right: 20px;
     }
+        /*card*/
+        .body_card {
+            padding-left: 80px;
+            padding-right: 80px;
+        }
+        /*card*/
 }
   
   /* Tablets em modo paisagem */
 @media (min-width: 769px) and (max-width: 1024px) {
+    .menu_contracted {
+        display: none;
+    }
     .icon_sicredi {
         position: absolute;
         top: 50%;
@@ -363,8 +583,8 @@ main {
         transform: translate(-65%, -50%);
     }
     .base {
-        margin-left: 100px;
-        margin-right: 30px;
+        margin-left: 15px;
+        margin-right: 15px;
         background-color: rgb(150, 216, 137);
         margin-top: 101px;
         height: 100%;
@@ -384,10 +604,8 @@ main {
         display: flex;
         flex-direction: column;
         height: auto;
-        width: 100%;
     }
     .box_introducao {
-        width:89%;
         padding-left: 40px;
         padding-right: 40px;
     }
@@ -395,16 +613,16 @@ main {
         width: 100%;
         height: 100%;
         border-radius: 10px 10px 10px 10px;
+        display: flex;
+        justify-content: center;
     }
     
     .imagem_box img {
-        margin-left: 40px;
-        width: 89%;
+        width: 90%;
         height: 100%;
         max-height: 400px;
         border-radius: 10px 10px 10px 10px;
     }
-
     .sobre_box {
         margin-top: 20px;
         display: flex;
@@ -416,8 +634,8 @@ main {
         justify-content: space-around;
     }
     .sobre_item {
-        width: 500px;
-        height: 300px;
+        width: 90%;
+        height: auto;
         border: 1px solid #d3d3d3;
         background-color: rgb(248, 249, 247);
         border-radius: 10px;
@@ -432,25 +650,30 @@ main {
         gap: 10px;
         padding-top: 10px;
     }
-    
     .sobre_item_topo img {
         padding-left: 10px;
-        height: 50px;
+        height: 40px;
     }
     
     .sobre_item_corpo {
         display: flex;
-        height: 200px;
+        height: auto;
         text-align: justify;
         padding-left: 20px;
         padding-right: 20px;
     }
+    /*card*/
+    .body_card {
+        padding-left: 100px;
+        padding-right: 100px;
+    }
+    /*card*/
 }
   
   /* Desktops */
 @media (min-width: 1025px) and (max-width: 1200px) {
     .base {
-        margin-left: 110px;
+        margin-left: 40px;
         margin-right: 40px;
         background-color: rgb(111, 173, 184);
         margin-top: 101px;
@@ -475,8 +698,7 @@ main {
     }
     .box_introducao {
         width: 60%;
-        padding-left: 40px;
-        padding-right: 40px;
+        padding-right: 20px;
     }
     .imagem_box {
         width: 40%;
@@ -488,26 +710,23 @@ main {
         height: 100%;
         border-radius: 10px 10px 10px 10px;
     }
-
     .sobre_box {
-        background-color: rgb(0, 255, 255);
         margin-top: 20px;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        align-items: center;
         width: 100%;
-        height: 450px;
-        gap: 15px;
-        justify-content: space-around;
+        height: auto;
+        gap: 20px;
     }
-    
     .sobre_item {
-        width: 800px;
-        height: 400px;
+        width: 90%;
+        height: auto;
         border: 1px solid #d3d3d3;
         background-color: rgb(248, 249, 247);
         border-radius: 10px;
     }
-    
+
     .sobre_item_topo {
         font-size: 14px;
         display: flex;
@@ -517,27 +736,31 @@ main {
         gap: 10px;
         padding-top: 10px;
     }
-    
     .sobre_item_topo img {
         padding-left: 10px;
-        height: 50px;
+        height: 40px;
     }
     
     .sobre_item_corpo {
         display: flex;
-        height: 300px;
+        height: auto;
         text-align: justify;
         padding-left: 20px;
         padding-right: 20px;
     }
+    /*card*/
+    .body_card {
+        padding-left: 140px;
+        padding-right: 140px;
+    }
+    /*card*/
 }
   
   /* Desktops grandes */
 @media (min-width: 1201px) {
     .base {
-        margin-left: 150px;
+        margin-left: 40px;
         margin-right: 40px;
-        background-color: rgb(113, 94, 223);
         margin-top: 101px;
         height: 100%;
         text-align: justify;
@@ -580,24 +803,29 @@ main {
     }
 
     .sobre_box {
-        background-color: rgb(0, 255, 255);
         margin-top: 20px;
         display: flex;
         flex-direction: row;
-        width: 100%;
-        height: 400px;
+        align-items: stretch; /* Alinha todos os elementos com a mesma altura */
         gap: 20px;
-        justify-content: space-around;
     }
     
     .sobre_item {
-        width: 800px;
-        height: 400px;
+        display: flex;
+        flex-direction: column;
+        flex: 1;
         border: 1px solid #d3d3d3;
         background-color: rgb(248, 249, 247);
         border-radius: 10px;
     }
-    
+    .sobre_item_topo, .sobre_item_corpo {
+        flex-shrink: 0;
+    }
+    .sobre_item_corpo {
+        flex-grow: 1;
+        padding-left: 40px;
+        padding-right: 40px;
+    }
     .sobre_item_topo {
         display: flex;
         flex-direction: row;
@@ -612,12 +840,15 @@ main {
         padding-left: 20px;
         height: 50px;
     }
-    .sobre_item_corpo {
-        display: flex;
-        height: 290px;
-        text-align: justify;
-        padding-left: 30px;
-        padding-right: 30px;
+
+    .sobre_item_corpo_href {
+        color: var(--verde_principal);
     }
     /*Base*/
+    /*card*/
+    .body_card {
+        padding-left: 200px;
+        padding-right: 200px;
+    }
+    /*card*/
 }
